--- a/module4/video_gallery.html
+++ b/module4/video_gallery.html
@@ -9,17 +9,36 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="">
-
+ <!-- internal/embedded styles here -->
     <style>
-           <!-- internal/embedded styles here -->
-
-
+       .img-container {
+  float: left;
+  width: 33.33%; /* three containers (use 25% for four, and 50% for two, etc) */
+  padding: 5px; /* if you want space between the images */
+}
     </style>
  </head>
 
  <body>
-<!--  your visible page content below -->
-Hello World!
 
- </body>
+  
+  <h1> Video Embed Gallery </h1>
+
+ <div>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/Unzc731iCUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  Patrick Winston's How to Speak talk has been an MIT tradition for over 40 years. 
+  Offered every January, the talk is intended to improve your speaking ability in critical situations by teaching you a few heuristic rules.
+  </div>
+  <div> <iframe width="560" height="315" src="https://www.youtube.com/embed/ba-HMvDn_vU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  Prof. Kanwisher tells a true story to introduce the course, then covers the why, how, and what of studying the human brain 
+  and gives a course overview.
+  <div>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  Tim Urban knows that procrastination doesn't make sense, 
+  but he's never been able to shake his habit of waiting until the last minute to get things done. 
+  In this hilarious and insightful talk, Urban takes us on a journey through YouTube binges, 
+  Wikipedia rabbit holes and bouts of staring out the window -- 
+  and encourages us to think harder about what we're really procrastinating on, before we run out of time.
+  </div>
+  </body>
 </html>
