--- a/module3/image1.html
+++ b/module3/image1.html
@@ -6,6 +6,17 @@
 </head>
 
 <body>
-The content of the document......
+    <h1></h1>
+
+ <h2>African Leopard Tortoise</h2>
+    <div>
+       <img src="image1.jpg" alt="African Leopard Tortoise" width="500" height="600"> 
+   
+    </div>
+    <div>
+        <caption>An African Leopard Tortoise caught in the midst of an evening meal of grass.</caption>
+    </div>
+    <a href="https://github.com/Druar/Druar.github.io/tree/main/module3">Gallery</a>
+
+
 </body>
-</html>
