--- a/module3/image2.html
+++ b/module3/image2.html
@@ -2,21 +2,22 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Title of the document</title>
+<title>Kenyan Rift Valley</title>
 </head>
 
 <body>
-    <h1></h1>
+    <h1>Kenyan Rift Valley</h1>
 
- <h2>African Leopard Tortoise</h2>
     <div>
-       <img src="image1.jpg" alt="African Leopard Tortoise" width="500" height="600"> 
+       <img src="image2.jpg" alt="African Leopard Tortoise" width="500" height="600"> 
    
     </div>
     <div>
-        <caption>An African Leopard Tortoise caught in the midst of an evening meal of grass.</caption>
+        <caption>This is a typical view of the landscape in the Kenyan rift valley.</caption>
     </div>
     <a href="https://github.com/Druar/Druar.github.io/tree/main/module3">Gallery</a>
 
+
+</body>
 
 </body>
