--- a/module2/resume-tables.html
+++ b/module2/resume-tables.html
@@ -20,36 +20,42 @@ break-word'>
 
 <div class=WordSection1>
 
- <p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
+    <table style="float:right;"
+
+ class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
 mso-outline-level:1'><b><span style='font-size:24.0pt;font-family:"Times New Roman",serif;
-mso-fareast-font-family:"Times New Roman";mso-font-kerning:18.0pt'><table> Jonathan H
-Doe<o:p></o:p></span></b></p> 
+mso-fareast-font-family:"Times New Roman";mso-font-kerning:18.0pt'>
+Jonathan H Doe<o:p></o:p></span></b></p> 
+
 <tr>
 <p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
 mso-outline-level:2'><b><span style='font-size:18.0pt;font-family:"Times New Roman",serif;
 mso-fareast-font-family:"Times New Roman"'>Web Designer, Director<o:p></o:p></span></b></p> </tr>
 
-<p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
+<tr><th><p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
 mso-outline-level:3'><a
 href="https://a1019-69027409.cluster32.canvas-user-content.com/courses/1019~1621104/files/1019~69027409/course%20files/resume1.html?download=1&amp;inline=1&amp;sf_verifier=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzUxMiJ9.eyJ1c2VyX2lkIjoiMTAxOTAwMDAwMDM4NDE1MTIiLCJyb290X2FjY291bnRfaWQiOiIxMDE5MDAwMDAwMDA4MTMzMyIsIm9hdXRoX2hvc3QiOiJib3N0b25jb2xsZWdlLmluc3RydWN0dXJlLmNvbSIsInJldHVybl91cmwiOm51bGwsImZhbGxiYWNrX3VybCI6Imh0dHBzOi8vYm9zdG9uY29sbGVnZS5pbnN0cnVjdHVyZS5jb20vY291cnNlcy8xNjIxMTA0L2ZpbGVzLzY5MDI3NDA5L3ByZXZpZXc_ZmFsbGJhY2tfdHM9MTYzMTU1OTc2NiIsImV4cCI6MTYzMTU2MDA2Nn0._5KJ3PKc88X3hz-HBedFb2XuGA3GoggZ1QypZ6lLo7hoY3r5N6IViXH6oAeoJMA0T1PsHNAivxBHkdrOMOBoVQ"><b><span
 style='font-size:13.5pt;font-family:"Times New Roman",serif;mso-fareast-font-family:
 "Times New Roman"'>Download PDF</span></b></a><b><span style='font-size:13.5pt;
-font-family:"Times New Roman",serif;mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></b></p>
+font-family:"Times New Roman",serif;mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></b></p></th>
 
-<tr><p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
+</tr><th><p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
 mso-outline-level:3'><a href="mailto:name@yourdomain.com"><b><span
 style='font-size:13.5pt;font-family:"Times New Roman",serif;mso-fareast-font-family:
 "Times New Roman"'>name@yourdomain.com</span></b></a><b><span style='font-size:
-13.5pt;font-family:"Times New Roman",serif;mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></b></p></tr>
+13.5pt;font-family:"Times New Roman",serif;mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></b></p></th><tr>
 
-</tr><p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
+<tr></th><p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
 mso-outline-level:3'><b><span style='font-size:13.5pt;font-family:"Times New Roman",serif;
-mso-fareast-font-family:"Times New Roman"'>(313) - 867-5309<o:p></o:p></span></b></p><tr></table>
+mso-fareast-font-family:"Times New Roman"'>(313) - 867-5309<o:p></o:p></span></b></p><th></tr
 
-<td><p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
+
+class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
 mso-outline-level:2'><b><span style='font-size:18.0pt;font-family:"Times New Roman",serif;
-mso-fareast-font-family:"Times New Roman"'>Profile<o:p></o:p></span></b></p> </td>
-<td>
+mso-fareast-font-family:"Times New Roman"'>Profile<o:p></o:p></span></b></p> 
+
+</table>
+
 <p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto'><span
 style='font-family:"Times New Roman",serif'>Progressively evolve cross-platform
 ideas before impactful infomediaries. Energistically visualize tactical
@@ -72,12 +78,12 @@ mso-outline-level:2'><b><span style='font-size:18.0pt;font-family:"Times New Rom
 mso-fareast-font-family:"Times New Roman"'>Interface Design<o:p></o:p></span></b></p>
 
 <p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto'><span
-style='font-family:"Times New Roman",serif'>Credibly streamline
+style='font-family:"Times New Roman",serif'> <strong>Credibly</strong> streamline
 mission-critical value with multifunctional functionalities. <o:p></o:p></span></p>
 
 <p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
 mso-outline-level:2'><b><span style='font-size:18.0pt;font-family:"Times New Roman",serif;
-mso-fareast-font-family:"Times New Roman"'>Project Direction<o:p></o:p></span></b></p>
+mso-fareast-font-family:"Times New Roman"'>Project Direction<o:p></o:p></span></b></p> 
 
 <p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto'><span
 style='font-family:"Times New Roman",serif'>Proven ability to lead and manage a
