--- a/module3/gallery/image1.html
+++ b/module3/gallery/image1.html
@@ -2,10 +2,19 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Title of the document</title>
+<title>African Leopard Tortoise</title>
 </head>
 
 <body>
-The content of the document......
+<h2>African Leopard Tortoise</h2>
+<div>
+    <img src="image1.jpg" alt="African Leopard Tortoise" width="500" height="600"> 
+
+ </div>
+ <div>
+     <caption>An African Leopard Tortoise caught in the midst of an evening meal of grass</caption>
+ </div>
+ <a href="https://github.com/Druar/Druar.github.io/blob/main/module3/gallery/gallery.html">Back</a>
+
 </body>
 </html>
