--- a/module3/image2.html
+++ b/module3/image2.html
@@ -6,18 +6,16 @@
 </head>
 
 <body>
-    <h1>Kenyan Rift Valley</h1>
+    <h2>Kenyan Rift Valley</h2>
 
-    <div>
-       <img src="image2.jpg" alt="African Leopard Tortoise" width="500" height="600"> 
+    
+       <img src="https://github.com/Druar/Druar.github.io/blob/main/module3/gallery/images/image2.jpg" alt="Kenyan Rift valley" width="500" height="600"> 
    
-    </div>
+    
     <div>
         <caption>This is a typical view of the landscape in the Kenyan rift valley.</caption>
     </div>
-    <a href="https://github.com/Druar/Druar.github.io/tree/main/module3">Gallery</a>
+    <a href="https://github.com/Druar/Druar.github.io/blob/main/module3/gallery/gallery.html">Gallery</a>
 
-
-</body>
 
 </body>
