--- a/module3/gallery/gallery.html
+++ b/module3/gallery/gallery.html
@@ -40,9 +40,9 @@
   <h2>List</h2>
 
   <ul>
-    <li><a href="image1.html"target="new"><img src="images/image1_thumb.jpg" alt="image1-thumb"/></a></li>
-    <li><a href="image2.html"target="new"><img src="images/image2_thumb.jpg" alt="image2-thumb"/></a></li>
-    <a href="image3.html"target="new"><img src="images/image3_thumb.jpg" alt="image3-thumb"/></a></li>
+    <li><a href="image1.html"target="new"><img src="https://github.com/Druar/Druar.github.io/tree/main/module3/gallery/images/image1-thumb.jpg" alt="image1-thumb"/></a></li>
+    <li><a href="image2.html"target="new"><img src="https://github.com/Druar/Druar.github.io/tree/main/module3/gallery/images/image2-thumb.jpg" alt="image2-thumb"/></a></li>
+    <a href="image3.html"target="new"><img src="https://github.com/Druar/Druar.github.io/tree/main/module3/gallery/images/image3-thumb.jpg" alt="image3-thumb"/></a></li>
     </ul>
   
 </body>
