--- a/module2/image-table.html
+++ b/module2/image-table.html
@@ -66,7 +66,7 @@
       being pushed off the mountaintops.  Visit while you still can.</p> 
   </div>
   <div class="column">
-    <img src="https://cte.bc.edu/ADIT1340/images/sloth.jpg" alt="Mountains" style="width: 500px;">
+    <img src="https://cte.bc.edu/ADIT1340/images/sloth.jpg" alt="sloth in tree" style="width: 500px;">
     <a href="https://cte.bc.edu/ADIT1340/images/sloth.jpg"><h2>Sloth doing what sloths do best!</h2></a>
       <p>There are two species of sloths: two-toed and three-toed. Although the 
          name is misleading given that all sloths have three toes. Actually the 
