--- a/inclass-gallery/gallery-template.html
+++ b/inclass-gallery/gallery-template.html
@@ -24,14 +24,14 @@
 <nav>
 	<ul>
 		<li><a href="image1.html"  target="full-size">
-			<img src="image1-thumb.jpg" alt="sailboat" width="100">
+			<img src="inclass-gallery/image1-thumb.jpg" alt="sailboat" width="100">
 		</a>
 		</li>
 		<li><a href="image2.html" target="full-size">
-			<img src="images/image2-thumb.jpg" alt="Rocks" width="100"></a>
+			<img src="inclass-gallery/image2-thumb.jpg" alt="Rocks" width="100"></a>
 		</li>
 		<li><a href="image3.html" target="full-size">
-			<img src="images/image3-thumb.jpg" alt="Landscape" width="100"></a>
+			<img src="inclass-gallery/image3-thumb.jpg" alt="Landscape" width="100"></a>
 		</li>
 	</ul>
 </nav>
