--- a/module4/halloween.html
+++ b/module4/halloween.html
@@ -21,18 +21,18 @@ style rule for h3; font-size: 2em; margin-bottom: 0;
 <h2> </h2>
 
 <h3>Werewolf</audio> <audio controls autoplay>
-  <source src="werewolf.ogg" type="audio/ogg">
-  <source src="werewolf.mp3" type="audio/mpeg">
+  <source src="audio/werewolf.ogg" type="audio/ogg">
+  <source src="audio/werewolf.mp3" type="audio/mpeg">
 </h3></audio> <audio ></audio>
 
 <h3>Witches Cackle</audio> <audio controls autoplay>
-  <source src="witchesCackle.ogg" type="audio/ogg">
-  <source src="witchesCackle.mp3" type="audio/mpeg">
+  <source src="audio/witchesCackle.ogg" type="audio/ogg">
+  <source src="audio/witchesCackle.mp3" type="audio/mpeg">
 </h3></audio> <audio ></audio>
 
 <h3>Rain Storm</audio> <audio controls autoplay>
-  <source src="rainStorm.ogg" type="audio/ogg">
-  <source src="rainStorm.mp3" type="audio/mpeg">
+  <source src="audio/rainStorm.ogg" type="audio/ogg">
+  <source src="audio/rainStorm.mp3" type="audio/mpeg">
 </h3></audio> <audio ></audio>
 
 
