--- a/module4/video_gallery.html
+++ b/module4/video_gallery.html
@@ -4,8 +4,8 @@
     <title>Your Page Title</title>
     <meta charset="UTF-8">
    <meta name="description" content="Free Web tutorials">
-   <meta name="keywords" content="your, relevant, keywords, in, a, comma, separated, list">
-   <meta name="author" content="Your Name">
+   <meta name="keywords" content="video, Patrick Winston,Tim Urban, MIT, youtube , Professor Kanwisher, human brain">
+   <meta name="author" content="Astrid">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="">
